[package]
name = "planeshift"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[features]
default = ["enable-winit"]
enable-glx = ["gl_generator", "x11"]
enable-glx-default = ["enable-glx"]
enable-winit = ["winit"]

[build-dependencies.gl_generator]
version = "0.9"
optional = true

[target.'cfg(target_os = "linux")'.build-dependencies]
gl_generator = "0.9"

[dependencies]
bitflags = "1.0"
euclid = "0.19"
gl = "0.6"
lazy_static = "1.1"
tempfile = "3.0"

[dependencies.winit]
version = "0.17"
optional = true

[dependencies.x11]
version = "2.18"
features = ["xlib"]
optional = true

[target.'cfg(target_os = "linux")'.dependencies.wayland-client]
version = "0.20"
features = ["egl", "native_lib"]

[target.'cfg(target_os = "linux")'.dependencies.wayland-sys]
version = "0.20"
features = ["client", "egl"]

[target.'cfg(target_os = "linux")'.dependencies.x11]
version = "2.18"
features = ["xlib"]

[target.'cfg(target_os = "macos")'.dependencies]
cgl = "0.2"
objc = "0.2"

# [target.'cfg(target_os = "macos")'.dependencies.cocoa]
# path = "/Users/pcwalton/Source/core-foundation-rs/cocoa"

# [target.'cfg(target_os = "macos")'.dependencies.core-foundation]
# path = "/Users/pcwalton/Source/core-foundation-rs/core-foundation"

# [target.'cfg(target_os = "macos")'.dependencies.core-graphics]
# path = "/Users/pcwalton/Source/core-foundation-rs/core-graphics"

# [target.'cfg(target_os = "macos")'.dependencies.io-surface]
# path = "/Users/pcwalton/Source/core-foundation-rs/io-surface"

[target.'cfg(target_family = "windows")'.dependencies.mozangle]
version = "0.1"
features = ["egl"]

[target.'cfg(target_family = "windows")'.dependencies.winapi]
version = "0.3"
features = ["d3d11", "dcomp", "winerror"]

[dev-dependencies]
image = "0.20"
winit = "0.17"
